--- a/earthstock/templates/base.html
+++ b/earthstock/templates/base.html
@@ -3,10 +3,16 @@
 <head>
 	<meta charset="UTF-8">
 	<title>{% block title %}My amazing site{% endblock %}</title>
+	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootswatch/3.1.1/slate/bootstrap.min.css">
+	{% block style %}{% endblock %}
 </head>
 <body>
 	<div id="content">
    {% block content %}{% endblock %}
   </div>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+	<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+	{% block script %}{% endblock %}
 </body>
 </html>
