--- a/earthstock/templates/earthstock.html
+++ b/earthstock/templates/earthstock.html
@@ -1,7 +1,19 @@
 {% extends "base.html" %}
+{% load staticfiles %}
 
 {% block title %} Hello, world! {% endblock %}
 
 {% block content %}
-   <p>Hello, world!</p>
+<div class="row">
+	<div class="col-xs-3">
+		
+	</div>
+	<div class="col-xs-9">
+		
+	</div>
+</div>
+{% endblock %}
+
+{% block script %}
+	<script src="{% static "js/app.js" %}"></script>
 {% endblock %}
