--- a/earthstock/templates/base.html
+++ b/earthstock/templates/base.html
@@ -13,6 +13,7 @@
   </div>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="https://www.google.com/jsapi"></script>
 	{% block script %}{% endblock %}
 </body>
 </html>
