--- a/earthstock/templates/earthstock.html
+++ b/earthstock/templates/earthstock.html
@@ -7,6 +7,9 @@
 <div class="row">
 	<div id="sidebar" class="col-xs-3">
 		{% include "partials/test.html" with test="Test!" %}
+    <div id="yahtribootion">
+      Powered by <img src="{{STATIC_URL}}img/yahoo_finance.png" alt="Yahoo! Finance" />
+    </div>
 	</div>
 	<div id="map3d" class="col-xs-9"></div>
 </div>
